--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,12 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
+    "@0xpolygonid/js-sdk": "^1.17.8",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@iden3/js-crypto": "^1.1.0",
-    "@iden3/js-iden3-core": "^1.3.1",
-    "@iden3/js-merkletree": "^1.2.0",
+    "@iden3/js-iden3-core": "^1.4.0",
+    "@iden3/js-merkletree": "^1.3.1",
     "@metamask/sdk": "^0.4.1",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.13.7",
@@ -26,7 +27,7 @@
     "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
+    "next": "14.2.0",
     "postcss": "8.4.24",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
