--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SUPPORTED_STATE_CONTRACTS="137=0xdc2A724E6bd60144Cde9DEC0A38a26C619d84B90,80001=0x134B1BE34911E39A8397ec6289782989729807a4,80002=0x1a4cC30f2aA0377b0c3bc9848766D90cb4404124"
-SUPPORTED_RPC="137=<RPC_POLYGON_MAINNET>,80001=<RPC_POLYGON_MUMBAI>,80002=<RPC_MATIC_AMOY>"
+SUPPORTED_STATE_CONTRACTS="80002=0x1a4cC30f2aA0377b0c3bc9848766D90cb4404124,21000=0x3C9acB2205Aa72A05F6D77d708b5Cf85FCa3a896"
+SUPPORTED_RPC="80002=<RPC_URL_POLYGON_AMOY>,21000=https://rpc-mainnet.privado.id"
 ISSUERS="<ISSUER_DID>"
 EXTERNAL_HOST="<NGROK_URL>"
